src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TwoTagsUnderComplexProperty.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
    <Button>
        <Button.Background>
            <SolidColorBrush Color="Red" />
            <SolidColorBrush Color="Red" />
        </Button.Background>
    </Button>
</DockPanel>
</Page>
